self-signed-certificates-in-kubernetes/nginx1-mw.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirecttohttps
  namespace: nginx1
spec:
  redirectScheme:
    permanent: false
    scheme: https
