self-signed-certificates-in-kubernetes/nginx1-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx1-svc
  namespace: nginx1
  labels:
    app: nginx1-app
spec:
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx1-app
